# ffswork

./: CMakeLists.txt  README.md
scripts/: package_zip.sh  setup_windows.ps1
src/: OnnxModel.cpp  OnnxModel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RnnoiseProcessor.cpp  RnnoiseProcessor.h  StftProcessor.cpp  StftProcessor.h
